# clox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  objects-using-closures.lox  shell.nix
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: call-field.lox  gc.lox
